# gpui-examples

./: Cargo.toml  README.md
src/: main.rs  template.rs  template_1.rs
src/testing/: mod.rs
src/testing/template/: main.rs
src/testing/test_1/: context_menu.rs  main.rs  main_window.rs  mod.rs  page.rs  sidebar.rs  titlebar.rs
