[package]
name = "testing"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
# Optional, for default bundled assets
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1.0"